WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262857
[tvOS] -[WebAVPlayerController timeRangeSeekable] leaks a AVTimeRange instance
https://bugs.webkit.org/show_bug.cgi?id=262857
Summary
[tvOS] -[WebAVPlayerController timeRangeSeekable] leaks a AVTimeRange instance
Andy Estes
Reported
2023-10-07 21:20:15 PDT
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-07 21:20:26 PDT
<
rdar://problem/116636048
>
Andy Estes
Comment 2
2023-10-07 21:21:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18822
EWS
Comment 3
2023-10-09 12:43:58 PDT
Committed
269090@main
(d756bb9f70f8): <
https://commits.webkit.org/269090@main
> Reviewed commits have been landed. Closing PR #18822 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug