[tvOS] -[WebAVPlayerController timeRangeSeekable] leaks a AVTimeRange instance https://bugs.webkit.org/show_bug.cgi?id=262857 rdar://116636048

Reviewed by Eric Carlson.

Autoreleased the newly-created AVTimeRange instance returned by -timeRangeSeekable.

* Source/WebCore/platform/ios/WebAVPlayerController.mm:
(-[WebAVPlayerController timeRangeSeekable]):

Canonical link: https://commits.webkit.org/269090@main